infra/k8s/dev/agent/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: agent
  namespace: dev
  labels:
    app: agent

spec:
  replicas: 1

  selector:
    matchLabels:
      app: agent

  template:
    metadata:
      labels:
        app: agent

    spec:
      containers:
        - name: agent
          image: moataz189/agent-service:0.0.14

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
