infra/k8s/dev/agent/agent-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: agent-svc
  namespace: dev
  labels:
    app: agent

spec:
  type: ClusterIP

  selector:
    app: agent

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
